Refactored query handling for filter page

--- a/app/assets/javascripts/templates/filterAnime.hbs
+++ b/app/assets/javascripts/templates/filterAnime.hbs
@@ -38,18 +38,22 @@
 <div class="container filter-page">
   <div class="filter-page">
     <div class="row">
-      {{#each animeList}}
-        {{#link-to 'anime' this}}
-          <div class="col-md-2 col-sm-3">
-            <div class="filter-page-card">
-              <img class="filter-page-poster" {{bind-attr src=posterImage}} />
-              <span class="filter-page-name">
-                {{canonicalTitle}}
-              </span>
+      {{#if loading}}
+        {{loading-indicator}}
+      {{else}}
+        {{#each filterResults}}
+          {{#link-to 'anime' this}}
+            <div class="col-md-2 col-sm-3">
+              <div class="filter-page-card">
+                <img class="filter-page-poster" {{bind-attr src=posterImage}} />
+                <span class="filter-page-name">
+                  {{canonicalTitle}}
+                </span>
+              </div>
             </div>
-          </div>
-        {{/link-to}}
-      {{/each}}
+          {{/link-to}}
+        {{/each}}
+      {{/if}}
     </div>
   </div>
 </div>
