--- a/app/assets/javascripts/templates/header/notifications.hbs
+++ b/app/assets/javascripts/templates/header/notifications.hbs
@@ -2,7 +2,7 @@
   <a {{bind-attr class="dropdown-toggle :notification-link hasUnreadNotifications:hasNew:hasNoNew"}} data-toggle='dropdown' href='#'>
     <i {{bind-attr class=':fa :fa-bell :active'}}>
       {{#if hasUnreadNotifications}}
-        {{strpad unreadNotifications}}
+        {{strpad unreadNotificationsCount}}
       {{/if}}
     </i>
   </a>
